<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5pt"
                android:layout_marginLeft="5pt"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_otherfactors"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/activity_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5pt"
                android:layout_marginBottom="5pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_context"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/options_activity_context"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/activity_context1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_context_succeeding" />

                    <RadioButton
                        android:id="@+id/activity_context2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_context_within" />

                    <RadioButton
                        android:id="@+id/activity_context3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_context_preceding" />

                    <RadioButton
                        android:id="@+id/activity_context4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_context_none"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5pt"
                android:layout_marginBottom="5pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_locations"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/options_locations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/locations1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_locations1" />

                    <RadioButton
                        android:id="@+id/locations2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_locations2" />

                    <RadioButton
                        android:id="@+id/locations3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_locations3" />

                    <RadioButton
                        android:id="@+id/locations4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_locations4"/>

                    <RadioButton
                        android:id="@+id/locations5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_others"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout

                android:id="@+id/social_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5pt"
                android:layout_marginBottom="5pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_social_context"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/options_social_context"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/social_context1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_social_context1" />

                    <RadioButton
                        android:id="@+id/social_context2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_social_context2" />

                    <RadioButton
                        android:id="@+id/social_context3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_social_context3" />

                    <RadioButton
                        android:id="@+id/social_context4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_social_context4" />

                    <RadioButton
                        android:id="@+id/social_context5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options_others" />
                </RadioGroup>
            </LinearLayout>

            <include layout="@layout/likert_scale_layout" android:id="@+id/busyness" />
            <include layout="@layout/likert_scale_layout" android:id="@+id/perceived_privacy" />
            <include layout="@layout/likert_scale_layout" android:id="@+id/social_norms" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />

</RelativeLayout>